--- a/.github/workflows/ci-Exporter.OneCollector.yml
+++ b/.github/workflows/ci-Exporter.OneCollector.yml
@@ -1,5 +1,8 @@
 name: Build OpenTelemetry.Exporter.OneCollector
 
+permissions:
+  contents: read
+
 on:
   push:
     branches: [ 'main*', 'exporter*' ]
