--- a/examples/wcf/server-aspnetframework/Examples.Wcf.Server.AspNetFramework.csproj
+++ b/examples/wcf/server-aspnetframework/Examples.Wcf.Server.AspNetFramework.csproj
@@ -8,6 +8,7 @@
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <AppConfig>web.config</AppConfig>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectCapability Include="DotNetCoreWeb" />
