--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,17 +3,39 @@ name: Build
 on:
   pull_request:
     branches: [ 'main*', 'instrumentation*', 'exporter*', 'extensions*' ]
-    paths-ignore:
-    - '**.md'
-    - '*/OpenTelemetry.Exporter.Geneva*/**'
-    - '*/OpenTelemetry.Exporter.OneCollector*/**'
-    - '*/OpenTelemetry.Instrumentation.Owin*/**'
-    - '*/OpenTelemetry.Instrumentation.Process*/**'
-    - '*/OpenTelemetry.Instrumentation.Wcf*/**'
-    - 'examples/wcf/**'
 
 jobs:
-  build-test:
+  detect-changes:
+    runs-on: windows-latest
+    outputs:
+      changes: ${{ steps.changes.outputs }}
+    steps:
+    - uses: dorny/paths-filter@v2
+      id: changes
+      with:
+        filters: '.github/ci-filters.yml'
+
+  lint-md:
+    needs: detect-changes
+    if: job.detect-changes.step1.changes.md == true
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: check out code
+      uses: actions/checkout@v4
+
+    - name: install markdownlint-cli
+      run: sudo npm install -g markdownlint-cli
+
+    - name: run markdownlint
+      run: markdownlint .
+
+  build-test-solution:
+    needs: detect-changes
+    if: |
+      job.detect-changes.step1.changes.solution == true
+      || job.detect-changes.step1.changes.build == true
+      || job.detect-changes.step1.changes.shared == true
 
     strategy:
       fail-fast: false # ensures the entire test matrix is run, even if one permutation fails
@@ -26,47 +48,19 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v4
+    - run: 'echo "testing"'
 
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v3
+  build-test-wcf:
+    needs: detect-changes
+    if: |
+      job.detect-changes.step1.changes.wcf == true
+      || job.detect-changes.step1.changes.build == true
+      || job.detect-changes.step1.changes.shared == true
+    uses: ./.github/workflows/Component.BuildTest.yml
+    with:
+      project-name: OpenTelemetry.Instrumentation.Wcf
+      code-cov-name: Instrumentation.Wcf
 
-    - name: Restore
-      run: dotnet restore
-
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-
-    - name: Test ${{ matrix.version }}
-      shell: pwsh
-      run: |
-        $projects = Get-ChildItem `
-          -Path test/*.Tests/*.csproj `
-          -Exclude `
-            OpenTelemetry.Exporter.Geneva.Tests.csproj,
-            OpenTelemetry.Exporter.OneCollector.Tests.csproj,
-            OpenTelemetry.Instrumentation.Owin.Tests.csproj,
-            OpenTelemetry.Instrumentation.Process.Tests.csproj,
-            OpenTelemetry.Instrumentation.Wcf.Tests.csproj
-
-        ForEach ($project in $projects)
-        {
-          dotnet test $project.FullName --collect:"Code Coverage" --results-directory:"TestResults" --framework ${{ matrix.version }} --configuration Release --no-restore --no-build --logger:"console;verbosity=detailed" -- RunConfiguration.DisableAppDomain=true
-        }
-
-    - name: Install coverage tool
-      run: dotnet tool install -g dotnet-coverage
-
-    - name: Merging test results
-      run: dotnet-coverage merge -r -f cobertura -o ./TestResults/Cobertura.xml ./TestResults/*.coverage
-
-    - uses: codecov/codecov-action@v3.1.4
-      continue-on-error: true # Note: Don't fail for upload failures
-      env:
-        OS: ${{ matrix.os }}
-        TFM: ${{ matrix.version }}
-      with:
-        file: TestResults/Cobertura.xml
-        env_vars: OS,TFM
-        flags: unittests
-        name: Code Coverage for solution on [${{ matrix.os }}.${{ matrix.version }}]
+  build-test:
+    needs: [lint-md, build-test-solution, build-test-wcf]
+    runs-on: windows-latest
