--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -65,6 +65,9 @@ components:
     - vishweshbankwar
   src/OpenTelemetry.ResourceDetectors.Container/:
     - iskiselev
+  src/OpenTelemetry.ResourceDetectors.Process/:
+    - Kielek
+    - lachmatt
   src/OpenTelemetry.ResourceDetectors.ProcessRuntime/:
     - Kielek
     - lachmatt
@@ -144,6 +147,9 @@ components:
     - vishweshbankwar
   test/OpenTelemetry.ResourceDetectors.Container.Tests/:
     - iskiselev
+  test/OpenTelemetry.ResourceDetectors.Process.Tests/:
+    - Kielek
+    - lachmatt
   test/OpenTelemetry.ResourceDetectors.ProcessRuntime.Tests/:
     - Kielek
     - lachmatt
