--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -99,6 +99,11 @@ flags:
     paths:
       - src/OpenTelemetry.ResourceDetectors.Azure
 
+  unittests-ResourceDetectors.Process:
+    carryforward: true
+    paths:
+      - src/OpenTelemetry.ResourceDetectors.Process
+
   unittests-ResourceDetectors.ProcessRuntime:
     carryforward: true
     paths:
